--- a/templates/gift.html
+++ b/templates/gift.html
@@ -132,7 +132,7 @@
 					
 					<script>
 						
-								$('#giftForm').validate() // initialize the plugin
+								$('#giftForm').validate(); // initialize the plugin
 								
 					</script>
 				
