Added Admin Lesson Features

--- a/templates/_base.htm
+++ b/templates/_base.htm
@@ -20,27 +20,10 @@
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
+			
 		</noscript>
-		<script type="text/javascript">
-			function hideshow(which){
-				link1 = document.getElementById('link1')
-				link2 = document.getElementById('link2')
-				link3 = document.getElementById('link3')
-				if (which.id=='link1') {
-					link1.style.display="block"
-					link2.style.display="none"
-					link3.style.display="none"
-				} else if (which.id=='link2') {
-					link1.style.display="none"
-					link2.style.display="block"
-					link3.style.disoplay="none"
-				} else if (which.id=='link3') {
-					link1.style.display="none"
-					link2.style.display="none"
-					link3.style.display="block"
-				}
-			}
-		</script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
 		<!--CKEDITOR-->
 		<!--<script src="../ckeditor.js"></script>-->
 		<script src="http://cdn.ckeditor.com/4.4.5/standard-all/ckeditor.js"></script>
@@ -55,7 +38,8 @@
 		
 		<script type="text/javascript" language="javascript" src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script type="text/javascript" language="javascript" src="//cdn.datatables.net/1.10.3/js/jquery.dataTables.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.3/css/jquery.dataTables.css">
+		
+	
 		
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
