--- a/css/gift.css
+++ b/css/gift.css
@@ -25,3 +25,27 @@ fieldset div {
     margin-right: auto;
 	
 }
+
+div .giftInput{
+width: 100%;
+padding:0.1em;
+margin:0.1em;
+}
+
+div .giftInput span{
+	display:block;
+	overflow:hidden;
+}
+div .giftInput label{
+	float: left;
+	margin-right:10px;
+    padding:5px 0;
+    color:gray;
+}
+
+	div.inputdata input{
+        width:100%;
+        padding-top:8px;
+        background:none;
+    }
+
