--- a/templates/adminLessons.html
+++ b/templates/adminLessons.html
@@ -1,240 +1,261 @@
 {% extends "templates/_base.htm" %}
 {% block bodycontent %}
- 
- 
- 
+ <script src="js/admin/lessons.js"></script>
 <!-- Main -->
 
 
 
+<script type="text/javascript">
+			function hideshow(which){
+				link1 = document.getElementById('adminPrivateLink')
+				link2 = document.getElementById('adminDropInLink')
+				link3 = document.getElementById('adminGroupLink')
+				if (which.id=='adminPrivateLink') {
+					link1.style.display="block"
+					link2.style.display="none"
+					link3.style.display="none"
+				} else if (which.id=='adminDropInLink') {
+					link1.style.display="none"
+					link2.style.display="block"
+					link3.style.display="none"
+				} else if (which.id=='adminGroupLink') {
+					link1.style.display="none"
+					link2.style.display="none"
+					link3.style.display="block"
+				}
+			}
+		</script>
+
+
+
+
+
+		<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	
+
+
+
+
+	
 <section class="wrapper style1">
+
+
+<!-- Button trigger modal -->
+		
+
+
+
 <div class="container">
-<div id="content">
- <form>
-            <textarea name="editor1" id="editor1" rows="10" cols="80">
-                This is my textarea to be replaced with CKEditor.
-            </textarea>
-            <script>
-                // Replace the <textarea id="editor1"> with a CKEditor
-                // instance, using default configuration.
-                CKEDITOR.replace( 'editor1' );
-            </script>
-        </form>
-<!-- Content -->
- 
-<h2 style="text-align:center">Calendar and Events</h2>
-<!--<img src="images/Moose.jpg" alt="Smiley face" align="middle">-->
 
 
-<p>Private & Group Lessons (by appointment)</p>
-<input type="submit" id="privateLessonsSaveTable"></input>
-<button id="btnAddPrivateLesson">New</button>
-<table id="privateLessons" class="display" cellspacing="0" width="100%">
-        <thead>
-			
-            <tr>
-				<th class="type">Type</th>
-                <th class="lesson">City</th>
-                <th class="lesson">Date</th>
-                <th class="lesson">Time</th>
-                <th class="lesson">Location</th>
-                <th class="lesson">Cost</th>
-               <th class="options">Options</th>
-				
-				
-            </tr>
-        </thead>
-		<tbody>
-		{% for plesson in privateLessons %}
+<button id="modalButton" type="button" class="addLesson btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+		  Add Lesson
+		</button>
+<!-- Modal -->
 
-            <tr id="{{plesson.key.id()}}">
-				<td class="type">Private</td>
-				<td class="lesson">{{plesson.city}}</td>
-				<td class="lesson">{{plesson.date}}</td>
-				<td class="lesson">{{plesson.time}}</td>
-				<td class="lesson">{{plesson.location}}</td>
-				<td class="lesson">{{plesson.cost}}</td>
-				<td class="options"><button class='btnEdit'value='Edit'>Edit</button><button class='btnDelete'value='Delete'>Delete</button></td>
-				
-            </tr>
-			{% endfor %}
-		</tbody>
-    </table>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div  class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Add Lesson</h4>
+      </div>
+	 
+		 
+		  <div class="modal-body">
+		
+
+
+		</div>
+		
 	
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button  id="submitLesson" type="button" class="btn btn-primary" data-dismiss="modal">Save Changes</button>
+		<!--<input type="submit" id="submitLesson" class="btn btn-primary" value="Save Changes"></button>-->
+      </div>
+	 
+    </div>
+  </div>
+</div>
+
+<!--
+
+<div class="modal fade" id="myModalEdit" tabindex="-1" role="dialog" aria-labelledby="myModalLabelEdit" aria-hidden="true">
+  <div class="modal-dialog">
+    <div  class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabelEdit">Edit Lesson</h4>
+      </div>
+	 
+		 
+		  <div class="modal-body">
+		
 
 
-<p>Group Lessons/Dances Drop-In</p>
-<input type="submit" id="dropInLessonsSaveTable"></input>
-<button id="btnAddDropInLesson">New</button>
-<table id="dropInLessons" class="display" cellspacing="0" width="100%">
-        <thead>
-			
-            <tr>
-				<th class="type">Type</th>
-                <th class="lesson">City</th>
-                <th class="lesson">Date</th>
-                <th class="lesson">Time</th>
-                <th class="lesson">Location</th>
-                <th class="lesson">Cost</th>
-                <th class="options">Options</th>
-				
-				
-            </tr>
-        </thead>
-		<tbody>
-		{% for lesson in lessons %}
-
-            <tr id="{{lesson.key.id()}}">
-				<td class="type">Drop-In</td>
-				<td class="lesson">{{lesson.city}}</td>
-				<td class="lesson">{{lesson.date}}</td>
-				<td class="lesson">{{lesson.time}}</td>
-				<td class="lesson">{{lesson.location}}</td>
-				<td class="lesson">{{lesson.cost}}</td>
-				<td class="options"><button class='btnEdit'value='Edit'>Edit</button><button class='btnDelete'value='Delete'>Delete</button></td>
-				
-            </tr>
-			{% endfor %}
-		</tbody>
-    </table>
+		</div>
+		
 	
-	
-	
-	
-	
-<p>Group Lessons (4-6 week sessions)</p>
-<input type="submit" id="groupLessonsSaveTable"></input>
-<button id="btnAddGroupLesson">New</button>
-<table id="groupLessons" class="display" cellspacing="0" width="100%">
-        <thead>
-			
-            <tr>
-				<th class="type">Type</th>
-                <th class="lesson">City</th>
-                <th class="lesson">Date</th>
-                <th class="lesson">Time</th>
-                <th class="lesson">Location</th>
-                <th class="lesson">Cost</th>
-                <th class="options">Options</th>
-				
-            </tr>
-        </thead>
-		<tbody>
-		{% for gLesson in groupLessons %}
-
-              <tr id="{{gLesson.key.id()}}">
-				<td class="type">Group</td>
-				<td class="lesson">{{gLesson.city}}</td>
-				<td class="lesson">{{gLesson.date}}</td>
-				<td class="lesson">{{gLesson.time}}</td>
-				<td class="lesson">{{gLesson.location}}</td>
-				<td class="lesson">{{gLesson.cost}}</td>
-				<td class="options"><button class='btnEdit'value='Edit'>Edit</button><button class='btnDelete'value='Delete'>Delete</button></td>
-				
-            </tr>
-			{% endfor %}
-		</tbody>
-    </table>
-
-	
-
-
-
-
-
-
-
-
-	<!--
-	
-
-<table align="center">
-<h3>Group Lessons / Dances (drop-in)</h3>
-<tr >
-<th>Place</th>
-<th>When</th>
-<th>Time</th>
-<th>Location</th>
-<th>Cost</th>
-<th>Register</th>
-</tr>
-<tr align="center">
-<td>Altona</td>
-<td>Sundays: Oct 5, Feb 1, Mar 22, Apr 19, May 3</td>
-<td>3:00 P Lesson 3:30 P Dancing</td>
-<td>St Mary's Community Center, 1812 Lynn Av</td>
-<td>$10 person</td> 
-<td><input type="radio" name="rdo" id="altona1" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-<tr align="center">
-<td>Eau Claire</td>
-<td>Wednesdays: Oct 5, Feb 1, Mar 22, Apr 19, 
-May 3 Saturday: Oct25 (Fall Formal with Hors )</td>
-<td>3:00 P Lesson 3:30 P Dancing</td>
-<td>St Mary's Community Center, 1812 Lynn Av</td>
-<td>$20 person</td>
-<td><input type="radio" name="rdo" id="eau1" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-<tr align="center">
-<td>MarshField</td>
-<td>Oct 24</td>
-<td>7:30 P Lesson, 8:30 P Dancing</td>
-<td>St Mary's Community Center, 1812 Lynn Av</td>
-<td>$10 person</td>
-<td><input type="radio" name="rdo" id="marsh1" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-<tr align="center">
-<td>Menomonie</td>
-<td>Oct 5, Feb 1, Mar 22, Apr 19, May 3</td>
-<td>3:00 P Lesson 3:30 P Dancing</td>
-<td>St Mary's Community Center, 1812 Lynn Av</td>
-<td>$10 person</td>
-<td><input type="radio" name="rdo" id="meno1" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-</table>
-<table align="center">
-<h3>Group Lessons (4-6 week sessions)</h3>
-<tr >
-<th>Place</th>
-<th>When</th>
-<th>Time</th>
-<th>Location</th>
-<th>Cost</th>
-<th>Register</th>
-</tr>
-<tr align="center">
-<td>Eau Claire</td>
-<td>Tuesdays: Sep 16-Oct-17 
-</td>
-<td>Beginning Social Dancing at 6:15-7:30 P
-Intermediate at 7:30-8:45 P</td>
-<td>(register for location)</td>
-<td>$49 person</td>
-<td><input type="radio" name="rdo2" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-<tr align="center">
-<td>MarshField</td>
-<td>Mondays: Sep 29-Nov3 & Fri Oct 24 Feb 1, Mar 22, 
-Apr 19, May 3</td>
-<td>Level 1 at 5:50 P (Swing, Foxtrot, Waltz, Rumba)  
-Level 2 at 6:45 P Level 3 at 7:40 P  </td>
-<td>(register for location)</td>
-<td>$59 person</td>
-<td><input type="radio" name="rdo2" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-<tr align="center">
-<td>Rice</td>
-<td>Mondays: Sep 29-Nov3 & Fri Oct 24 Feb 1, Mar 22, 
-Apr 19, May 3</td>
-<td>  Level 1 at 6:00 P (Swing, Foxtrot, Waltz, Rumba) Level 2 at 7:15 P   </td>
-<td>(register for location)</td>
-<td>$59 person</td>
-<td><input type="radio" name="rdo2" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-
-</table>
-
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button  id="editLesson" type="button" class="btn btn-primary" data-dismiss="modal">Update Lesson</button>
+		<!--<input type="submit" id="submitLesson" class="btn btn-primary" value="Save Changes"></button>
+      </div>
+	 
+    </div>
+  </div>
+</div>
 -->
+			<div class="row double">
+
+				<div class="3u">
+							<div id="sidebar">
+
+								<!-- Sidebar -->
+									
+									<section>
+										<h4>Lessons</h4>
+										<ul><a href="javascript:hideshow(document.getElementById('adminPrivateLink'))" >Private & Group Lessons (by appointment)</a></ul>
+										<ul><a href="javascript:hideshow(document.getElementById('adminDropInLink'))"  >Group Lessons/Dances Drop-In</a></ul>
+										<ul><a href="javascript:hideshow(document.getElementById('adminGroupLink'))" >Group Lessons (4-6 week sessions)</a></ul>
+									
+									</section>
+						
+							</div>
+				</div>
+
+		<style>
+			.lessonInfo{
+				border:solid;
+				border-color:#2E9AFE;
+				
+			}
+			
+		</style>
+		<article id="adminPrivateLink" class="private" style="display: none;">
+		 <h4>Private Lessons</h4>
+		{% for plesson in privateLessons %}		
+		<div id="{{plesson.key.id()}}"class="lessonInfo">
+		
+		<button type="button" class="editLesson btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+			Edit Lesson Modal
+		</button>
+		<button type="button" class="deleteLesson btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+			Delete Lesson
+		</button>
+						
+			<div class = "lessonTypeInfo">
+			Type:{{plesson.city}}
+			</div>
+			<div class = "lessonDateInfo">
+			Date:{{plesson.date}}
+			</div>
+			
+			<div class = "lessonTimeInfo">
+			Time:{{plesson.time}}
+			</div>
+			
+			<div class = "lessonDetailsInfo" >
+			Details:{{plesson.details}}
+			</div>
+			
+			<div class = "lessonLocationInfo">
+			Location:{{plesson.location}}
+			</div>
+			
+			<div class = "lessonCostInfo">
+			Cost:{{plesson.cost}}
+			</div>
+			
+		</div>		
+		{% endfor %}
+		</article>
+		
+		<article id="adminDropInLink" class="dropIn" style="display: none;">
+		 <h4>Drop-In Lessons</h4>
+		
+		
+		{% for dlesson in dropInLessons %}		
+		<div id="{{dlesson.key.id()}}"class="lessonInfo">
+		
+		<button type="button" class="editLesson btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+			Edit Lesson Modal
+		</button>
+		<button type="button" class="deleteLesson btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+			Delete Lesson
+		</button>
+						
+			<div class = "lessonTypeInfo">
+			Type:{{dlesson.city}}
+			</div>
+			<div class = "lessonDateInfo">
+			Date:{{dlesson.date}}
+			</div>
+			
+			<div class = "lessonTimeInfo">
+			Time:{{dlesson.time}}
+			</div>
+			
+			<div class = "lessonDetailsInfo" >
+			Details:{{dlesson.details}}
+			</div>
+			
+			<div class = "lessonLocationInfo">
+			Location:{{dlesson.location}}
+			</div>
+			
+			<div class = "lessonCostInfo">
+			Cost:{{dlesson.cost}}
+			</div>
+			
+		</div>		
+		{% endfor %}
+		
+		</article>
+		<article id="adminGroupLink" class="group" style="display: none;">
+		 <h4>Group Lessons</h4>
+		
+		{% for glesson in groupLessons %}		
+		<div id="{{glesson.key.id()}}"class="lessonInfo">
+		
+		<button type="button" class="editLesson btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+			Edit Lesson Modal
+		</button>
+		<button type="button" class="deleteLesson btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+			Delete Lesson
+		</button>
+						
+			<div class = "lessonTypeInfo">
+			Type:{{glesson.city}}
+			</div>
+			<div class = "lessonDateInfo">
+			Date:{{glesson.date}}
+			</div>
+			
+			<div class = "lessonTimeInfo">
+			Time:{{glesson.time}}
+			</div>
+			
+			<div class = "lessonDetailsInfo" >
+			Details:{{glesson.details}}
+			</div>
+			
+			<div class = "lessonLocationInfo">
+			Location:{{glesson.location}}
+			</div>
+			
+			<div class = "lessonCostInfo">
+			Cost:{{glesson.cost}}
+			</div>
+			
+		</div>		
+		{% endfor %}
+		</article>
+
+
+
 <style>
  
  
@@ -246,12 +267,16 @@ th {font-size:100%; font-weight: bold;background-color: #fff; background-color:#
 
  
 </style>
+		</div>
 </div>
 </div>
-</section>
-<script>
+</div>
 
-</script>
+
+
+
+</section>
+
  
 
 {% endblock %}
