--- a/templates/adminResources.html
+++ b/templates/adminResources.html
@@ -1,195 +1,62 @@
+
 {% extends "templates/_base.htm" %}
 {% block bodycontent %}
-		
-	<script>
-		var editor1, editorLinks, html = '';
-		
-		function createEditor() {
-			if ( editor1 )
-				return;
+ 
+<!-- Main -->
 
-			// Create a new editor instance inside the <div id="editor"> element,
-			// setting its value to html.
-			var config = {};
-			editor1 = CKEDITOR.appendTo('editor1', config, html );
+
+
+<section class="wrapper style1">
+<div class="container">
+<div id="content">
+
+<!-- Content -->
+ 
+<h2 style="text-align:center">Resources</h2>
+	
+	
+<input type="submit" id="resourceSaveTable"></input>
+<button id="btnAddResRow">New</button>
+<table id="resourceTable" class="display" cellspacing="0" width="100%">
+        <thead>
 			
+            <tr>
+				<th>Type</th>
+				<th>Title</th>
+				<th>Link or Address</th>
+				<th>Desc</th>
+				<th>Options</th>	
+			</tr>
+        </thead>
+		<tbody>
+		{% for resource in resources %}
 
-			// Update button states.
-			document.getElementById( 'remove' ).style.display = '';
-			document.getElementById( 'create' ).style.display = 'none';
-		}
-
-		function removeEditor() {
-			if ( !editor1 )
-				return;
-
-			// Retrieve the editor content. In an Ajax application this data would be
-			// sent to the server or used in any other way.
-			html = editor1.getData();
-
-			// Update <div> with "Edited Content".
-			document.getElementById( 'editorcontent1' ).innerHTML = html;
-			// Show <div> with "Edited Content".
-			document.getElementById( 'content1' ).style.display = '';
-			// Update button states.
-			document.getElementById( 'remove' ).style.display = 'none';
-			document.getElementById( 'create' ).style.display = '';
-
-			// Destroy the editor.
-			editor1.destroy();
-			editor1 = null;
-		}
-		
-		function createEditorLinks() {
-			if ( editorLinks )
-				return;
-
-			// Create a new editor instance inside the <div id="editor"> element,
-			// setting its value to html.
-			var config = {};
-			editorLinks = CKEDITOR.appendTo('editorLinks', config, html );
+		<tr>
+			<td>{{resource.type}}</td>
+			<td>{{resource.title}}</td>
+			<td>{{resource.linkOrAddress}}</td>
+			<td>{{resource.desc}}</td>
+			<td><button class='btnEditRes'value='Edit'>Edit</button></td>
 			
+		</tr>
+		{% endfor %}
+		</tbody>
+    </table>
 
-			// Update button states.
-			document.getElementById( 'saveLinks' ).style.display = '';
-			document.getElementById( 'createLinks' ).style.display = 'none';
-		}
-
-		function saveEditorLinks() {
-		
-			if ( !editorLinks )
-				return;
-			if ( CKEDITOR.instances.editorLinks.getData() == '' ){
-					alert( 'There is no data available.' );
-			}
-			// Retrieve the editor content. In an Ajax application this data would be
-			// sent to the server or used in any other way.
-			html = editorLinks.getData();
-			alert(html)
-			// Update <div> with "Edited Content".
-			document.getElementById( 'editorcontentLinks' ).innerHTML = html;
-			// Show <div> with "Edited Content".
-			document.getElementById( 'contentLinks' ).style.display = '';
-			// Update button states.
-			document.getElementById( 'saveLinks' ).style.display = 'none';
-			document.getElementById( 'createLinks' ).style.display = '';
-			
-			// Destroy the editor.
-			editorLinks.destroy();
-			editorLinks = null;
-		}
-		
-		
-		
-	</script>	
-		<!-- Main -->
-		
-
-			<section class="wrapper style1">
-				<div class="container">
-					<div class="row double">
-						<div class="4u">
-							<div id="sidebar">
-
-								<!-- Sidebar -->
-									
-									<section>
-									<h3>Links</h3>
-									
-											<h4>Dance Shoes</h4>
-											<ul><a href="javascript:hideshow(document.getElementById('link1'))">Very Fine Dance Shoes</a></ul>
-											<ul><a href="javascript:hideshow(document.getElementById('link2'))">Amercian Classic</a></ul>
-											<h4>Locations</h4>
-											<ul><a href="javascript:hideshow(document.getElementById('link3'))">Chippewa Valley Dance Club</a></ul>
-										
-									</section>
-						
-							</div>
-						</div>
-						<div class="8u skel-cell-important">
-							<div id="content">
-
-								<!-- Content -->
-									<article id="link1" style="display: none;">
-										<header>
-											<a href="https://www.veryfineshoes.com">
-											<h2>Very Fine Dance Shoes</h2>
-											</a>
-										</header>
-										<a href="https://www.veryfineshoes.com">
-											www.veryfineshoes.com
-										</a>
-
-									<p>
-										<input onclick="createEditorLinks();" type="button" value="Edit" id="createLinks">
-										<input onclick="saveEditorLinks();" type="button" value="Save" id="saveLinks" style="display:none">
-									</p>
-									<div id="editorLinks">
-									</div>
-										<div id="contentLinks" style="display: none">
-																			
-										
-										<div id="editorcontentLinks">
-										
-										</div>
-										<p>Very Fine Dancesport Shoes was founded in June 1998. 
-										We are OEM dance footwear manufacturer & supplier and we also carry our own house brands 
-										where the emphasis is on high-end design dance shoes using premium materials. Since our beginning,
-										the principle elements of our company have been focused on our service and delivery of quality products
-										with affordable prices. As a result, Very Fine has successfully became one of the largest dance shoes 
-										supplier in the US. Our relentless pursuit for perfection has made our dance shoes the first choice of
-										many professional dancers.
-										</p>
-										
-									</div>
-									
-										
-										
-										
-										
-									</article>
-									<article id="link2" style="display: none;">
-										<header>
-											<h2>American Classic Dance Shoes</h2>
-										</header>
-										<p></p>
-									</article>
-									<article id="link3" style="display: none;">
-										<header>
-											<a href="http://www.dance.spinstep.com/Main/CVDC">
-											<h2>Chippewa Valley Dance Club</h2>
-											</a>
-										</header>
-										<a href="http://www.dance.spinstep.com/Main/CVDC">
-											www.dance.spinstep.com/Main/CVDC
-										</a>
-										<p>The Chippewa Valley Dance Club (CVDC) is a non-profit ballroom dance club that will be sponsoring
-										five Saturday night dances this year. Also, five Sunday afternoon dances will be included this season 
-										which feature music presented by Goggin Ballroom Dancing. Dances are held at the St Mary's Community Center,
-										1812 Lynn Av, Altoona, WI.</p>
-										
-										<p>CVDC Membership Membership dues are $89 per person, which entitles you to attend all ten Saturday 
-										& Sunday dances. Nonmembers pay $16 per person at the door on Saturdays, Sunday dances are $10 per person.<p>
-										<p>Members enjoy:</p>
-										<ul>
-											<li>A $41 discount compared to the non-member fees </li>
-											<li>ABetter bands, because your advance payment helps us book good bands in advance</li>
-											<li>A stronger dance club: when you join us, all of your membership dues go to the dance club.</li>
-										</ul>
-												<form action="http://maps.google.com/maps" method="get" target="_blank">
-													<h1>Get Directions</h1>
-													<p>Enter your starting address:</p>
-													<input type="text" name="saddr" />
-													<input type="hidden" name="daddr" value="1812 Lynn Av, Altoona, WI" />
-													<input type="submit" value="Get Directions" />
-												</form>
-									</article>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>			
-
-		
+<style>
+ 
+ 
+th,tr { height: 40px; text-align:center  } 
+th {font-size:100%; font-weight: bold;background-color: #fff; background-color:#30C4DA;} td { font-size:70%; white-space:pre } img{position: relative;
+    right: -30%;
+    width: 400px;}
+ 
+</style>
+</div>
+</div>
+</section>
+<script>
+</script>
+ 
 
 {% endblock %}
