--- a/templates/lessons.html
+++ b/templates/lessons.html
@@ -3,8 +3,78 @@
  <script src="js/admin/lessons.js"></script>
 <!-- Main -->
 
+<script type="text/javascript">
+			function hideshow(which){
+				link1 = document.getElementById('privateLink')
+				link2 = document.getElementById('dropInLink')
+				link3 = document.getElementById('groupLink')
+				if (which.id=='privateLink') {
+					link1.style.display="block"
+					link2.style.display="none"
+					link3.style.display="none"
+				} else if (which.id=='dropInLink') {
+					link1.style.display="none"
+					link2.style.display="block"
+					link3.style.display="none"
+				} else if (which.id=='groupLink') {
+					link1.style.display="none"
+					link2.style.display="none"
+					link3.style.display="block"
+				}
+			}
+		</script>
+
+
+
+		<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	
+
+
+
+
+	
 <section class="wrapper style1">
+
+
+<!-- Button trigger modal -->
+		
+
+
+
 <div class="container">
+
+
+
+<!-- Modal -->
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div  class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Add Lesson</h4>
+      </div>
+	 
+		 
+		  <div class="modal-body">
+		
+
+
+		</div>
+		
+	
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button  id="submitLesson" type="button" class="btn btn-primary" data-dismiss="modal">Save Changes</button>
+		<!--<input type="submit" id="submitLesson" class="btn btn-primary" value="Save Changes"></button>-->
+      </div>
+	 
+    </div>
+  </div>
+</div>
+
+
 			<div class="row double">
 
 				<div class="3u">
@@ -13,245 +83,132 @@
 								<!-- Sidebar -->
 									
 									<section>
-										<h3>Links</h3>
+									
 										<h4>Lessons</h4>
-										<ul><a id = "privateLink" href="javascript:hideshowLessons(document.getElementById('private'))">Private & Group Lessons (by appointment)</a></ul>
-										<ul><a id = "dropLink" href="javascript:hideshowLessons(document.getElementById('dropIn'))">Group Lessons/Dances Drop-In</a></ul>
-										<ul><a id = "groupLink"href="javascript:hideshowLessons(document.getElementById('group'))">Group Lessons (4-6 week sessions)</a></ul>
-										
+										<ul><a href="javascript:hideshow(document.getElementById('privateLink'))" >Private & Group Lessons (by appointment)</a></ul>
+										<ul><a href="javascript:hideshow(document.getElementById('dropInLink'))"  >Group Lessons/Dances Drop-In</a></ul>
+										<ul><a href="javascript:hideshow(document.getElementById('groupLink'))" >Group Lessons (4-6 week sessions)</a></ul>
+									
 									</section>
 						
 							</div>
 				</div>
 
-
-
-
-<div class="9u skel-cell-important">
-	
-		<div id="content">
+		<style>
+			.lessonInfo{
+				border:solid;
+				border-color:#2E9AFE;
+				
+			}
+			
+		</style>
+		<article id="privateLink" class="private" style="display: none;">
+		<h4>Private Lessons</h4>
+		{% for plesson in privateLessons %}		
+		<div id="{{plesson.key.id()}}"class="lessonInfo">
+		
+				
+			<div class = "lessonTypeInfo">
+			Type:{{plesson.city}}
+			</div>
+			<div class = "lessonDateInfo">
+			Date:{{plesson.date}}
+			</div>
+			
+			<div class = "lessonTimeInfo">
+			Time:{{plesson.time}}
+			</div>
+			
+			<div class = "lessonDetailsInfo" >
+			Details:{{plesson.details}}
+			</div>
+			
+			<div class = "lessonLocationInfo">
+			Location:{{plesson.location}}
+			</div>
+			
+			<div class = "lessonCostInfo">
+			Cost:{{plesson.cost}}
+			</div>
+			
+		</div>		
+		{% endfor %}
+		
+		</article>
 		
 		
+		<article id="dropInLink" class="dropIn" style="display: none;">
+		 <h4>Drop-In Lessons</h4>
 		
 		
-			<!--
-			 <form>
-						<textarea name="editor1" id="editor1" rows="10" cols="80">
-							This is my textarea to be replaced with CKEditor.
-						</textarea>
-						<script>
-							// Replace the <textarea id="editor1"> with a CKEditor
-							// instance, using default configuration.
-							CKEDITOR.replace( 'editor1' );
-						</script>
-					</form>
+		{% for dlesson in dropInLessons %}		
+		<div id="{{dlesson.key.id()}}"class="lessonInfo">
+		
 					
-			-->
-			<!-- Content -->
- 
-			<h2 style="text-align:center">Calendar and Events</h2>
-			<!--<img src="images/Moose.jpg" alt="Smiley face" align="middle">-->
+			<div class = "lessonTypeInfo">
+			Type:{{dlesson.city}}
+			</div>
+			<div class = "lessonDateInfo">
+			Date:{{dlesson.date}}
+			</div>
+			
+			<div class = "lessonTimeInfo">
+			Time:{{dlesson.time}}
+			</div>
+			
+			<div class = "lessonDetailsInfo" >
+			Details:{{dlesson.details}}
 
-			<article id="private" style="visibility:hidden;">
-			<p>Private & Group Lessons (by appointment)</p>
-
-			<table id="privateLessons" class="display" cellspacing="0" width="100%">
-					<thead>
-						
-						<tr>
-							<th>Type</th>
-							<th>City</th>
-							<th>Date</th>
-							<th>Time</th>
-							<th>Location</th>
-							<th>Cost</th>
-						   
-							
-						</tr>
-					</thead>
-					<tbody>
-					{% for plesson in privateLessons %}
-
-						<tr id="{{plesson.key.id()}}">
-							<td>Private</td>
-							<td>{{plesson.city}}</td>
-							<td>{{plesson.date}}</td>
-							<td>{{plesson.time}}</td>
-							<td>{{plesson.location}}</td>
-							<td>{{plesson.cost}}</td>
-							
-							
-						</tr>
-						{% endfor %}
-					</tbody>
-				</table>
-			</article>
-
-			<article id="dropIn" style="visibility:hidden">
-			<p>Group Lessons/Dances Drop-In</p>
-			<table id="dropInLessons" class="display" cellspacing="0" width="100%">
-					<thead>
-						
-						<tr>
-							<th>Type</th>
-							<th>City</th>
-							<th>Date</th>
-							<th>Time</th>
-							<th>Location</th>
-							<th>Cost</th>
-						 
-						</tr>
-					</thead>
-					<tbody>
-					{% for lesson in lessons %}
-
-						<tr id="{{lesson.key.id()}}">
-							<td>Drop-In</td>
-							<td>{{lesson.city}}</td>
-							<td>{{lesson.date}}</td>
-							<td>{{lesson.time}}</td>
-							<td>{{lesson.location}}</td>
-							<td>{{lesson.cost}}</td>
-							
-						</tr>
-						{% endfor %}
-					</tbody>
-				</table>
-			</article>
+			</div>
+			
+			<div class = "lessonLocationInfo">
+			Location:{{dlesson.location}}
+			</div>
+			
+			<div class = "lessonCostInfo">
+			Cost:{{dlesson.cost}}
+			</div>
+			
+		</div>		
+		{% endfor %}
+		</article>
+		
+		
+		<article id="groupLink" class="group" style="display: none;">
+		 <h4>Group Lessons</h4>
+		
+		{% for glesson in groupLessons %}		
+		<div id="{{glesson.key.id()}}"class="lessonInfo">
+		
 				
-				
-				
-			<article id="group" style="visibility:hidden">
-			<p>Group Lessons (4-6 week sessions)</p>
+			<div class = "lessonTypeInfo">
+			Type:{{glesson.city}}
+			</div>
+			<div class = "lessonDateInfo">
+			Date:{{glesson.date}}
+			</div>
+			
+			<div class = "lessonTimeInfo">
+			Time:{{glesson.time}}
+			</div>
+			
+			<div class = "lessonDetailsInfo" >
+			Details:{{glesson.details}}
+			</div>
+			
+			<div class = "lessonLocationInfo">
+			Location:{{glesson.location}}
+			</div>
+			
+			<div class = "lessonCostInfo">
+			Cost:{{glesson.cost}}
+			</div>
+			
+		</div>		
+		{% endfor %}
+		
+		</article>
 
-			<table id="groupLessons" class="display" cellspacing="0" width="100%">
-					<thead>
-						
-						<tr>
-							<th>Type</th>
-							<th>City</th>
-							<th>Date</th>
-							<th>Time</th>
-							<th>Location</th>
-							<th>Cost</th>
-						   
-							
-						</tr>
-					</thead>
-					<tbody>
-					{% for groupLesson in groupLessons %}
-
-						  <tr id="{{groupLesson.key.id()}}">
-							<td>Group</td>
-							<td>{{groupLesson.city}}</td>
-							<td>{{groupLesson.date}}</td>
-							<td>{{groupLesson.time}}</td>
-							<td>{{groupLesson.location}}</td>
-							<td>{{groupLesson.cost}}</td>
-							
-						</tr>
-						{% endfor %}
-					</tbody>
-				</table>
-
-				</article>
-
-
-
-
-
-
-
-	<!--
-	
-
-<table align="center">
-<h3>Group Lessons / Dances (drop-in)</h3>
-<tr >
-<th>Place</th>
-<th>When</th>
-<th>Time</th>
-<th>Location</th>
-<th>Cost</th>
-<th>Register</th>
-</tr>
-<tr align="center">
-<td>Altona</td>
-<td>Sundays: Oct 5, Feb 1, Mar 22, Apr 19, May 3</td>
-<td>3:00 P Lesson 3:30 P Dancing</td>
-<td>St Mary's Community Center, 1812 Lynn Av</td>
-<td>$10 person</td> 
-<td><input type="radio" name="rdo" id="altona1" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-<tr align="center">
-<td>Eau Claire</td>
-<td>Wednesdays: Oct 5, Feb 1, Mar 22, Apr 19, 
-May 3 Saturday: Oct25 (Fall Formal with Hors )</td>
-<td>3:00 P Lesson 3:30 P Dancing</td>
-<td>St Mary's Community Center, 1812 Lynn Av</td>
-<td>$20 person</td>
-<td><input type="radio" name="rdo" id="eau1" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-<tr align="center">
-<td>MarshField</td>
-<td>Oct 24</td>
-<td>7:30 P Lesson, 8:30 P Dancing</td>
-<td>St Mary's Community Center, 1812 Lynn Av</td>
-<td>$10 person</td>
-<td><input type="radio" name="rdo" id="marsh1" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-<tr align="center">
-<td>Menomonie</td>
-<td>Oct 5, Feb 1, Mar 22, Apr 19, May 3</td>
-<td>3:00 P Lesson 3:30 P Dancing</td>
-<td>St Mary's Community Center, 1812 Lynn Av</td>
-<td>$10 person</td>
-<td><input type="radio" name="rdo" id="meno1" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-</table>
-<table align="center">
-<h3>Group Lessons (4-6 week sessions)</h3>
-<tr >
-<th>Place</th>
-<th>When</th>
-<th>Time</th>
-<th>Location</th>
-<th>Cost</th>
-<th>Register</th>
-</tr>
-<tr align="center">
-<td>Eau Claire</td>
-<td>Tuesdays: Sep 16-Oct-17 
-</td>
-<td>Beginning Social Dancing at 6:15-7:30 P
-Intermediate at 7:30-8:45 P</td>
-<td>(register for location)</td>
-<td>$49 person</td>
-<td><input type="radio" name="rdo2" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-<tr align="center">
-<td>MarshField</td>
-<td>Mondays: Sep 29-Nov3 & Fri Oct 24 Feb 1, Mar 22, 
-Apr 19, May 3</td>
-<td>Level 1 at 5:50 P (Swing, Foxtrot, Waltz, Rumba)  
-Level 2 at 6:45 P Level 3 at 7:40 P  </td>
-<td>(register for location)</td>
-<td>$59 person</td>
-<td><input type="radio" name="rdo2" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-<tr align="center">
-<td>Rice</td>
-<td>Mondays: Sep 29-Nov3 & Fri Oct 24 Feb 1, Mar 22, 
-Apr 19, May 3</td>
-<td>  Level 1 at 6:00 P (Swing, Foxtrot, Waltz, Rumba) Level 2 at 7:15 P   </td>
-<td>(register for location)</td>
-<td>$59 person</td>
-<td><input type="radio" name="rdo2" onclick="return confirm('Do you want ro register for this?')"></td>
-<tr>
-
-</table>
-
--->
 <style>
  
  
@@ -267,6 +224,10 @@ th {font-size:100%; font-weight: bold;background-color: #fff; background-color:#
 </div>
 </div>
 </div>
+
+
+
+
 </section>
 
  
