--- a/templates/construction.html
+++ b/templates/construction.html
@@ -11,7 +11,7 @@
 						<!-- Content -->
 
 								<header>
-									<h2><center>Under Construction</center></h2>
+									<h2><center>Under Constructionnnnn</center></h2>
 								</header>
 								
 								<span class="image featured"><img src="images/web-construction.jpg" alt="" /></span>
